TEST_PROGRAMS/INVALID/15/keyword2.go
/* using a Go (but not GoLite) keyword as an identifier */

package error

var map int;

func main(){
    map = 1
    println(map)
}
